[package]
name = "ternary-ecosystem"
version = "0.1.0"
edition = "2021"
description = "Emergent behavior from local Z₃ interactions. Multiple agent species (producers, consumers, decomposers) interacting via ternary signals. Tests: does a stable ecosystem emerge?"
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-ecosystem"
